--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 .buildlog/
 .history
 .svn/
+*.g.dart
+.g.dart
 
 # IntelliJ related
 *.iml
@@ -30,6 +32,7 @@
 .pub-cache/
 .pub/
 /build/
+lib/config.dart
 
 # Web related
 lib/generated_plugin_registrant.dart
@@ -42,3 +45,4 @@ app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+/lib/config.dart
