--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^0.18.0
   retrofit: any
   json_annotation: any
   percent_indicator:
@@ -45,6 +46,10 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+#dependency_overrides:
+#  flutter_svg: ^0.17.4
+#  image:
+#  xml: ^4.5.1
 # The following section is specific to Flutter.
 flutter:
 
